--- a/easypoi-web/pom.xml
+++ b/easypoi-web/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>cn.afterturn</groupId>
 		<artifactId>easypoi</artifactId>
-		<version>4.1.3</version>
+		<version>4.1.3-xunqing</version>
 	</parent>
 	<artifactId>easypoi-web</artifactId>
 	<dependencies>
