--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.afterturn</groupId>
     <artifactId>easypoi</artifactId>
-    <version>4.1.3</version>
+    <version>4.1.3-xunqing</version>
     <packaging>pom</packaging>
     <name>easypoi</name>
     <modules>
